# Crypto

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  ORDERFLOW BEAST REWORK MASTER.md  SIGNAL_AND_SCAN_GUIDE.md  TODO.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  railway.json  render.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml  deploy-demo.yml  deploy-production.yml  railway-deploy.yml
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/src/: log.ts  server.ts
apps/api/src/llm/: batch.ts  ledger.ts  router.ts
apps/api/src/notifications/: email.ts  push.ts  telegram.ts  webhook.ts
apps/api/src/routes/: notifications.ts  scans.ts  signals.ts
apps/orderflow-workers/: Dockerfile  README.md  pyproject.toml
apps/orderflow-workers/src/analytics/: cvd.py  derivatives_publisher.py  divergence.py  divergence_publisher.py  footprint_publisher.py  imbalance.py  regime.py  regime_publisher.py  streaming.py  sweeps.py  volume_profile.py
apps/orderflow-workers/src/ingest/: alpaca.py  binance.py  ccxt_ingest.py  oanda.py  persistence.py  scan_worker.py
apps/orderflow-workers/src/triggers/: evaluator.py
apps/orderflow-workers/tests/: test_cvd.py  test_imbalance.py
apps/web/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
apps/web/public/: sw.js
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx  page.tsx  providers.tsx
apps/workers/: Dockerfile  daily-recap.ts  notification-dispatcher.ts  package.json  tsconfig.json
apps/workers/lib/: logger.ts
apps/ws-gateway/: Dockerfile  package.json  tsconfig.json
apps/ws-gateway/src/: index.ts
docs/: ARCHITECTURE.md  LLM_CACHE_DOCTOR.md  NEXT_SESSION.md  OPERATIONS.md  USER_TODO.md
growth/: 01_brand_profile.md  02_campaign_briefings.md  03_pinned_thread.md  04_seed_posts_14d.md  05_instagram_templates.md  06_discussion_watchlist.md  07_launch_checklist.md  08_kpi_log.csv  09_validation_report.md  README.md  _validate.py  generate_assets.py
infra/: docker-compose.dev.yml  docker-compose.prod.yml
scripts/: verify-cache.ts  web-build.sh
todo/: 01-anthropic-key.md  02-resend-email.md  03-vapid-push.md  04-stripe-billing.md  05-alpaca-stocks.md  06-oanda-forex.md  07-paid-feeds.md  08-telegram-bot.md  09-susy-x-campaigns.md  10-pricing-and-flags.md
(+107 files in other folders)
