[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orderflow-workers"
version = "0.1.0"
description = "OrderFlow Analytics — async market data ingest, analytics, and signal trigger workers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "ccxt[async] >=4.3.0",
    "fastapi >=0.115.0",
    "uvicorn >=0.32.0",
    "numpy >=2.0.0",
    "pandas >=2.2.0",
    "numba >=0.60.0",
    "redis >=5.2.0",
    "psycopg2-binary >=2.9.0",
    "sqlalchemy >=2.0.0",
    "asyncpg >=0.30.0",
    "httpx >=0.27.0",
    "python-dotenv >=1.0.0",
    "hmmlearn >=0.3.0",
    "scikit-learn >=1.5.0",
    "websockets >=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest >=8.0.0",
    "pytest-asyncio >=0.24.0",
    "pytest-cov >=5.0.0",
    "ruff >=0.6.0",
    "mypy >=1.11.0",
    "types-redis >=4.6.0",
]

[project.scripts]
ingest-binance = "ingest.binance:cli_entry"
trigger-evaluator = "triggers.evaluator:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------
[tool.uv]
dev-dependencies = [
    "pytest >=8.0.0",
    "pytest-asyncio >=0.24.0",
    "pytest-cov >=5.0.0",
    "ruff >=0.6.0",
    "mypy >=1.11.0",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
